@@ -1,3 +1,8 @@
+2011-08-17  Simson Garfinkel  <simsong@mncrnpsedu.local>
+
+	* src/display.cpp (display::error_filename): error_filename now properly prints to DFXML
+
+
 2011-08-14  Simson Garfinkel  <simsong@t.nitroba.org>
 
 	* src/main.h (d): added __attribute__ ((format(printf))) to all printf-like functions
